// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success edit name 1`] = `
"<div class=\\"\\">
  <div class=\\"logo\\">
    <a href=\\"\\"><span>[</span> {{ logoText }} <span>]</span></a>
  </div>
  <div class=\\"sideleft\\">
    <label class=\\"sidebar-label\\">Navigation</label>
    <div class=\\"menu\\">
      <a href=\\"\\">
        <div class=\\"menu-item\\">
          <i class=\\"icon-home-outline menu-item-icon\\"></i><span class=\\"menu-item-label\\">Dashboard</span>
        </div>
      </a>
      <!--if-->
    </div>
  </div>
  <div class=\\"header\\">
    <div class=\\"header-left\\">
      <div class=\\"navicon-left\\">
        <a>
          <i class=\\"icon-menu\\"></i>
        </a>
      </div>
    </div>
    <div class=\\"header-right\\">
      <div class=\\"dropdown\\">
        <a class=\\"link-profile\\"><span class=\\"logged-name\\">John Smith</span></a>
        <div class=\\"dropdown-menu \\">
          <ul class=\\"user-profile-nav\\">
            <li>
              <a href=\\"/settings\\">
                <i class=\\"icon-cog\\"></i> Settings
              </a>
            </li>
            <li>
              <a href=\\"#\\">
                <i class=\\"icon-logout\\"></i> Sign Out
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"mainpanel\\">
    <h4 class=\\"page-header\\"> Profile settings
      <!--header-->
    </h4>
    <div class=\\"page-body\\">
      <div class=\\"panel settings\\">
        <h6>Name</h6>
        <p class=\\"mg-b-30\\">John Smith<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <form class=\\"form-layout\\">
            <!--header-->
            <!--if-->
            <!--ErrorsPanel-->
            <div class=\\"form-group\\">
              <label>Name:</label>
              <input name=\\"name\\" type=\\"text\\" autofocus=\\"\\">
            </div>
            <!--default-->
            <!--default-->
            <button type=\\"submit\\">
              <!--if-->Update
              <!--submit-->
            </button>
            <!--footer-->
          </form>
          <!--FormContainer-->
          <!--if-->
          <!--FormWithConfirmModal-->
          <!--DynamicComponent-->
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Email</h6>
        <p class=\\"mg-b-30\\">j.smith@example.com<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Password</h6>
        <p class=\\"mg-b-0\\">******<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
      </div>
      <!--body-->
    </div>
    <!--if-->
    <!--Page-->
    <!--ActivePageContainer-->
  </div>
</div>
<!--LayoutAuthenticated-->
<!--if-->
<!--Layout-->
<!--if-->"
`;

exports[`success edit name 2`] = `
"<div class=\\"\\">
  <div class=\\"logo\\">
    <a href=\\"\\"><span>[</span> {{ logoText }} <span>]</span></a>
  </div>
  <div class=\\"sideleft\\">
    <label class=\\"sidebar-label\\">Navigation</label>
    <div class=\\"menu\\">
      <a href=\\"\\">
        <div class=\\"menu-item\\">
          <i class=\\"icon-home-outline menu-item-icon\\"></i><span class=\\"menu-item-label\\">Dashboard</span>
        </div>
      </a>
      <!--if-->
    </div>
  </div>
  <div class=\\"header\\">
    <div class=\\"header-left\\">
      <div class=\\"navicon-left\\">
        <a>
          <i class=\\"icon-menu\\"></i>
        </a>
      </div>
    </div>
    <div class=\\"header-right\\">
      <div class=\\"dropdown\\">
        <a class=\\"link-profile\\"><span class=\\"logged-name\\">John Smith</span></a>
        <div class=\\"dropdown-menu \\">
          <ul class=\\"user-profile-nav\\">
            <li>
              <a href=\\"/settings\\">
                <i class=\\"icon-cog\\"></i> Settings
              </a>
            </li>
            <li>
              <a href=\\"#\\">
                <i class=\\"icon-logout\\"></i> Sign Out
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"mainpanel\\">
    <h4 class=\\"page-header\\"> Profile settings
      <!--header-->
    </h4>
    <div class=\\"page-body\\">
      <div class=\\"panel settings\\">
        <h6>Name</h6>
        <p class=\\"mg-b-30\\">John Smith<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <form class=\\"form-layout\\">
            <!--header-->
            <!--if-->
            <!--ErrorsPanel-->
            <div class=\\"form-group\\">
              <label>Name:</label>
              <input name=\\"name\\" type=\\"text\\" autofocus=\\"\\">
            </div>
            <!--default-->
            <!--default-->
            <button type=\\"submit\\" disabled=\\"\\">
              <div class=\\"sk-cube-grid\\">
                <div class=\\"sk-cube sk-cube1\\"></div>
                <div class=\\"sk-cube sk-cube2\\"></div>
                <div class=\\"sk-cube sk-cube3\\"></div>
                <div class=\\"sk-cube sk-cube4\\"></div>
                <div class=\\"sk-cube sk-cube5\\"></div>
                <div class=\\"sk-cube sk-cube6\\"></div>
                <div class=\\"sk-cube sk-cube7\\"></div>
                <div class=\\"sk-cube sk-cube8\\"></div>
                <div class=\\"sk-cube sk-cube9\\"></div>
              </div>
              <!--CubeAnimation-->
              <!--if-->Update
              <!--submit-->
            </button>
            <!--footer-->
          </form>
          <!--FormContainer-->
          <div class=\\"modal\\" data-test-modal=\\"\\"><span class=\\"close\\" title=\\"Close Modal\\" data-test-close-button=\\"\\">×</span>
            <!--if-->
            <div class=\\"modal-content\\">
              <div class=\\"container\\">
                <h4>Change name</h4>
                <p class=\\"content\\">Are you sure you want to change your name?</p>
                <div class=\\"footer\\">
                  <button data-test-ok-button=\\"\\" class=\\"\\">Ok</button>
                  <button class=\\"btn-secondary\\" data-test-cancel-button=\\"\\">Cancel</button>
                </div>
              </div>
            </div>
          </div>
          <!--ModalWindow-->
          <!--if-->
          <!--FormWithConfirmModal-->
          <!--DynamicComponent-->
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Email</h6>
        <p class=\\"mg-b-30\\">j.smith@example.com<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Password</h6>
        <p class=\\"mg-b-0\\">******<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
      </div>
      <!--body-->
    </div>
    <!--if-->
    <!--Page-->
    <!--ActivePageContainer-->
  </div>
</div>
<!--LayoutAuthenticated-->
<!--if-->
<!--Layout-->
<!--if-->"
`;

exports[`success edit name 3`] = `
"<div class=\\"\\">
  <div class=\\"logo\\">
    <a href=\\"\\"><span>[</span> {{ logoText }} <span>]</span></a>
  </div>
  <div class=\\"sideleft\\">
    <label class=\\"sidebar-label\\">Navigation</label>
    <div class=\\"menu\\">
      <a href=\\"\\">
        <div class=\\"menu-item\\">
          <i class=\\"icon-home-outline menu-item-icon\\"></i><span class=\\"menu-item-label\\">Dashboard</span>
        </div>
      </a>
      <!--if-->
    </div>
  </div>
  <div class=\\"header\\">
    <div class=\\"header-left\\">
      <div class=\\"navicon-left\\">
        <a>
          <i class=\\"icon-menu\\"></i>
        </a>
      </div>
    </div>
    <div class=\\"header-right\\">
      <div class=\\"dropdown\\">
        <a class=\\"link-profile\\"><span class=\\"logged-name\\">Johny Smithy</span></a>
        <div class=\\"dropdown-menu \\">
          <ul class=\\"user-profile-nav\\">
            <li>
              <a href=\\"/settings\\">
                <i class=\\"icon-cog\\"></i> Settings
              </a>
            </li>
            <li>
              <a href=\\"#\\">
                <i class=\\"icon-logout\\"></i> Sign Out
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div class=\\"mainpanel\\">
    <h4 class=\\"page-header\\"> Profile settings
      <!--header-->
    </h4>
    <div class=\\"page-body\\">
      <div class=\\"panel settings\\">
        <h6>Name</h6>
        <p class=\\"mg-b-30\\">Johny Smithy<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Email</h6>
        <p class=\\"mg-b-30\\">j.smith@example.com<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
        <h6>Password</h6>
        <p class=\\"mg-b-0\\">******<a>
            <i class=\\"icon-pencil\\"></i>
          </a>
          <!--if-->
        </p>
        <!--Paragraph-->
      </div>
      <!--body-->
    </div>
    <!--if-->
    <!--Page-->
    <!--ActivePageContainer-->
  </div>
</div>
<!--LayoutAuthenticated-->
<!--if-->
<!--Layout-->
<!--if-->"
`;
